# mu

./: .gitignore  CONFIG.md  Cargo.toml  DEV.md  Makefile  Makefile.dev  README.md  base.l  compiler.l  core.docx  core.symbols  mu.l  mu.mk  prelude-bugs
codegen/: codegen.l  elf.l  loader.l
common/: boole.l  common.l
devtools/common/: Makefile  qqtest.lsp
devtools/symbols/: Makefile  crossref.l  symbols.l  symbols.py
doc/refcards/: core-ref.docx  lib-ref.docx  libcore-ref.docx  mu-ref.docx  utilities-ref.docx
doc/reference/: Makefile
docker/: Dockerfile.build  Dockerfile.ubuntu  Makefile
ld/: main.rs
lib/: mu.sh
lib/codegen/: compiler.l
lib/mu/: break.l  elf64.l
lib/prelude/: describe.l  list.l  loader.l  log.l  read.l  string.l  symbol.l  time.l  type.l
lib/valgrind/: Makefile  cachegrind.report  callgrind.report  memcheck.report
metrics/footprint/: Makefile
metrics/regression/: Makefile  base.report  current.summary  perf.l
metrics/valgrind/: Makefile  cachegrind.report  callgrind.report  memcheck.report
mu/: lib.rs
mu/core/: compiler.rs  config.rs  exception.rs  frame.rs  heap.rs  image.rs  mod.rs  namespace.rs  qquote.rs  reader.rs
mu/system/: process.rs
mu/types/: char.rs  fixnum.rs  function.rs  streams.rs  struct_.rs  vecimage.rs  vector.rs
perf/: Makefile  base.report  current.summary  perf-ns.py  perf.l
perf/prelude/: fixnum  type
prelude/: backquote.l  compile.l  ctype.l  environment.l  format.l  funcall.l  lambda.l  loader.l  namespace.l  prelude.l  read-macro.l  repl.l  string.l  vector.l
server/: listener.rs
sh/: main.rs
src/codegen/: armv8-aarch64.l  as.l  codegen.l  compiler.l  elf.l  loader.l
src/commmon/: predicates.l
src/common/: boole.l  common.l  describe.l  fixnum.l  forms.l  list.l  predicates.l  print.l  sequence.l  stream.l  string.l  symbol.l  time.l
src/core/: apply.l  base.l  closure.l  common.l  compile.l  core-symbols.l  core.l  deftype.l  elf64.l  environment.l  exception.l  fasl.def  fixnum.l  format.l  funcall.l  function.l  generic.l  lambda.l  let.l  list.l  load.l  macro.l  map.l  mod.def  module.l  namespace.l  package.l  parse.l  quasi.l  quasiquote.l  read-macro.l  read.l  stream.l  string.l  symbol-macro.l  symbol.l  test.def  testing.l  type.l  typedef.l  (+2 more)
src/core-cli/: Cargo.toml
src/core-sys/: Cargo.toml
src/crux/: lib.rs
src/devop/: Cargo.toml
src/forge/: Cargo.toml
src/image/: image.l  test-image.l
src/lade/: Cargo.toml
src/lib/: lib.rs
src/libcore/: lib.rs
src/libenv/: lib.rs
src/librt/: lib.rs
src/listener/: Cargo.toml
src/manifest/: Cargo.toml
src/mcore/: Cargo.toml
src/mforge/: Cargo.toml
src/mrepl/: Cargo.toml
src/mu/: break.l  common.l  compile.l  describe.l  elf64.l  lib.rs  lists.l  metrics.l  preface.l  repl.l  require.l  sequence.l  sort.l  state.l
src/mu-bindgen/: bindgen.rs  bindings.rs  config.rs  debug.rs  display.rs  format.rs  main.rs  symbol_table.rs  syntax.rs
src/mu-cli/: Cargo.toml
src/mu-core/: lib.rs
src/mu-exec/: Cargo.toml  main.rs
src/mu-ld/: Cargo.toml  image.rs  main.rs  reader.rs  writer.rs
src/mu-lisp/: preface.l
src/mu-listener/: Cargo.toml
src/mu-prof/: Cargo.toml
src/mu-repl/: Cargo.toml
src/mu-server/: Cargo.toml
src/mu-server/src/: listener.rs  server_config.rs
src/mu-sh/: Cargo.toml
src/mu-sys/: Cargo.toml  main.rs
src/mu-ui/: Cargo.toml
src/mu_runtime/: lib.rs
src/mux/: Cargo.toml
src/mux/profile/: Makefile  profile.l
src/mux/src/: annotate.rs  commit.rs  counts.rs  env.rs  exec.rs  init.rs  main.rs  options.rs  profile.rs  reference.rs  repl.rs  symbols.rs  test.rs
src/mux/src/image/: image.rs  mod.rs  reader.rs
src/prelude/: backquote.l  boole.l  break.l  common.l  compile.l  ctype.l  describe.l  elf64.l  environment.l  exception.l  fixnum.l  format.l  funcall.l  function.l  inspect.l  lambda.l  list.l  lists.l  loader.l  log.l  macro.l  map.l  metrics.l  mu.l  namespace.l  parse.l  preface.l  prelude.l  print.l  quasiquote.l  read-macro.l  read.l  repl.l  sequence.l  state.l  stream.l  string.l  symbol-macro.l  symbol.l  time.l  (+2 more)
src/repl/: Cargo.toml
src/sysgen/: Cargo.toml  bindmap.json  crate_.rs  crates.rs  main.rs  options.rs  symbol_table.rs  sysgen.rs
src/thorn/: state.l
sys-dev/: Cargo.toml
sys-dev/src/: main.rs  workspace.rs
tests/: Makefile  test-ns.py  test.py  tests.summary
tests/core/: backquote  (+15 more)
thorn/: elf64.l  lists.l  metrics.l  repl.l  require.l
(+1212 files in other folders)
