[package]
name = "mu"
version = "0.2.15"
edition = "2021"
license = "MIT" 
authors = ["James M. Putnam <putnamjm.design@gmail.com>"]

[workspace]
members = [ "src/mrepl", "src/mu-exec", "src/mu-server", "src/mu-sys", "src/mforge" ]
resolver = "2"

[lib]
name = "mu"
path = "src/mu/lib.rs"
crate-type = ["lib"]
bench = false

[features]
default = [ "core", "env", "system" ]
core = []
env = []           # needed for testing, common
system = []
instrument = []

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.perf]
inherits = "release"

[dependencies]
async-net = "2.0"
chrono = "0.4"
futures-lite = "2.6"
futures-locks = "0.7"
lite-json = "0.2"
log = "0.4"
memmap = "0.7"
modular-bitfield = "0.12"
nix = {version = "0.29", features = [ "feature" ]}
num_enum = "0.7"
page_size = "0.6"
perf_monitor = "0.2"
smol = "2.0"
timer = "0.2"

[target.'cfg(not(target_os = "macos"))'.dependencies]
sysinfo_dot_h = "0.2"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
