[package]
name = "mu-server"
version = "0.0.1"
edition = "2021"

[dependencies]
async-std = "1.12.0"
crossbeam = "0.8.4"
futures = { version = "0.3.30", features = [ "executor", "thread-pool" ]}
getopt = "1.1.3"
oports = "1.0.0"
mu = { path = "../.." }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.4"
