[package]
name = "mu-server"
version = "0.0.1"
edition = "2021"

[dependencies]
async-std = "1.13"
crossbeam = "0.8"
futures = { version = "0.3", features = [ "executor", "thread-pool" ]}
getopt = "1.1"
oports = "1.0"
mu = { path = "../.." }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
